tests/ui/failing/const_discriminant.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/consts/const_discriminant.rs`
warning: the feature `const_discriminant` has been stable since 1.75.0 and no longer requires an attribute to enable
 --> /home/zncv/Applications/mir-semantics-compiletest/ui/consts/const_discriminant.rs:2:12
  |
2 | #![feature(const_discriminant)]
  |            ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error[E0080]: evaluation of constant value failed
    --> /home/zncv/.rustup/toolchains/nightly-2024-11-29-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/mem/mod.rs:1167:18
     |
1167 |     Discriminant(intrinsics::discriminant_value(v))
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ read discriminant of an uninhabited enum variant
     |
note: inside `std::mem::discriminant::<Void>`
    --> /home/zncv/.rustup/toolchains/nightly-2024-11-29-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/mem/mod.rs:1167:18
     |
1167 |     Discriminant(intrinsics::discriminant_value(v))
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `TEST_VOID`
    --> /home/zncv/Applications/mir-semantics-compiletest/ui/consts/const_discriminant.rs:30:14
     |
30   |     unsafe { std::mem::discriminant(&*(&() as *const () as *const Void)); };
     |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
